<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_carnet"
        android:orderInCategory="100"
        android:title="@string/action_login_carnet"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_qr_scan"
        android:orderInCategory="100"
        android:title="@string/action_qr_scan"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_info"
        android:orderInCategory="101"
        android:title="@string/action_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="101"
        android:title="@string/action_Salir"
        app:showAsAction="never" />
</menu>
