<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_main"
        android:orderInCategory="100"
        android:title="@string/action_main"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_qr_scan"
        android:orderInCategory="100"
        android:title="@string/action_qr_scan"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_info"
        android:orderInCategory="101"
        android:title="@string/action_info"
        app:showAsAction="never" />
    <!--TEST-->
    <item
        android:id="@+id/action_change_db"
        android:orderInCategory="101"
        android:title="Cambiar Estados"
        android:visibility="invisible"
        app:showAsAction="never"/>
    <!--TEST-->
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="101"
        android:title="@string/action_Salir"
        app:showAsAction="never" />
</menu>

